fixed bug changes so items in the containers actually flex instead of going off screen

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ a {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        width: 250px;
+        padding: 10px;
         gap: 5px;
     }
 
@@ -68,14 +68,12 @@ a {
     }
 
 #section-2 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
     padding: 16px;
     margin-bottom: 16px    
 }
 
 #section-2 .title {
+    text-align: center;
     font-size: 20px;
     color: #1F2937;
     font-weight: bold;
@@ -111,7 +109,6 @@ a {
 
 #section-3 {
     display: flex;
-    flex-direction: column;
     background-color: #E5E7EB;
     height: 150px;
     align-items: center;
@@ -122,7 +119,9 @@ a {
     display: flex;
     flex-direction: column;
     width: 600px;
-    color: #1F2937;    
+    color: #1F2937;
+    justify-content: center; 
+    align-items: center;   
 
 }
 
